--- a/styleprjt.css
+++ b/styleprjt.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+.amg5{
+  display: none;
+}
 
 .logo{
  width: 20%;
@@ -76,6 +79,7 @@ color: gold;
   transform: translate(-50%,-50%);
   letter-spacing: 3px;
 }
+
 /* CHECK BTN */
 
   .checkbtn{
@@ -134,6 +138,38 @@ color: gold;
       display: none;
     }
     .amg{
+      display: none;
+    }
+    .amg5{
+      width: 100%;
+    }
+    #amg5{
+      width: 100%;
+    }
+    #h1tfo{
+      display:flex;
+      justify-content: center;
+    }
+    .amg1tfo{
+      font-size: 17px;
+      font-weight: 400;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      margin-bottom: 40px;
+    }
+    #h1tfo2{
+      display: flex;
+      justify-content: center;
+    }
+    .amg2tfo{
+      width: 100%;
+    }
+    .interiortfo{
+      font-size: 17px;
+      font-weight: 400;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      margin-bottom: 40px;
+    }
+    .footer-content2{
       display: none;
     }
   }
@@ -202,6 +238,37 @@ color: gold;
 text-decoration: none;
 color: gold;
 }
+
+@media screen and (max-width:1669px) {
+  .amg #h1ab{
+    color: black;
+    font-size: 30px;
+    top: 120%;
+    right: 2%;
+}
+
+  .amg1{
+    position: absolute;
+    font-size: 17px;
+    top:155%;
+  }
+  .amg #h1g2{
+    font-size: 30px;
+    position: absolute;
+    top: 190%;
+  }
+  .interior{
+    font-size: 17px;
+  }
+  .text{
+    color:white;
+    position: absolute;
+    right: 40%;
+    top: 40%;
+    transform: translate(-50%,-50%);
+    letter-spacing: 3px;
+  }
+}
 /* About Us Section */
 #about-us {
   padding: 4rem 2rem;
@@ -231,6 +298,7 @@ color: gold;
   color:#777;
   line-height: 1.7;
 }
+
 
 /* About Image */
 .about-image img {
@@ -262,24 +330,37 @@ color: gold;
     width: 100%;
     height: 150px;
     background-color: gray;
-    top: 180%;
+    top: 140%;
     justify-content: center;
   }
 }
   
   @media screen and (max-width: 600px){
     .footer-content{
-      display: flex;
-      position: absolute;
-      width: 100%;
-      height: 100px;
-      background-color: gray;
-      top: 110%;
-      justify-content: center;
+        display: none;
     }
       .containerabout{
         margin: 20px;
       }
+  }
+
+  @media screen and (max-width: 1669px){
+    .containerabout {
+      max-width: 1700px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      margin-left: 8%;
+    }
+
+    .footer-content{
+     
+      top: 110%;
+     
+    }
   }
 /* CONTACT CSS !!!*/
 
@@ -310,11 +391,13 @@ color: gold;
 .s1{
   display: flex;
   flex-grow: 1;
+  border-radius: 7px;
+  background-color: rgb(66, 164, 255);
 }
 .s1:hover{
-  cursor: pointer;
-  background-color: rgb(34, 202, 34);
+  background-color: rgba(48, 137, 253, 0.541);
 }
+
 input:focus{
   background-color: lightgreen;
 }
@@ -347,6 +430,7 @@ input:focus{
     height: 70%;
   }
 }
+
 
 
 
@@ -387,24 +471,29 @@ input:focus{
   transition: 0.3ms;
   scale: 105%;
 }
-.footer-content3{
-  display: flex;
-  position: absolute;
-  width: 100%;
-  height: 150px;
-  background-color: gray;
-  top: 180%;
-  justify-content: center;
-}
 
 @media screen and (max-width: 600px){
-  .footer-content3{
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: 100px;
-    background-color: gray;
-    top: 590%;
-    justify-content: center;
+  
+  .cars{
+    width: 50%;
+    height:200px ;
+    padding-left:"0";
   }
+  .sl55{
+    width: 100%;
+    padding-right: 0px;
+  }
+  .cars{
+    padding-left: 0%;
 }
+}
+
+@media screen and (max-width: 1669px){
+}
+@media screen and (max-width: 1326px){
+  .footer-content3{
+    top: 330%;
+  }
+  
+  }
+  
