--- a/styleprjt.css
+++ b/styleprjt.css
@@ -4,9 +4,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-.amg5{
-  display: none;
-}
+
 
 .logo{
  width: 20%;
@@ -72,7 +70,7 @@ color: gold;
 }
 
 .text{
-  color:white;
+  color: white;
   position: absolute;
   right: 60%;
   top: 40%;
@@ -131,109 +129,73 @@ color: gold;
       height: 40%;
       margin: 0 100px;
     }
-    .main{
-      display: none;
-    }
+   
     #icn{
       display: none;
     }
-    .amg{
-      display: none;
+    .text{
+      color: white;
+      position: absolute;
+      right:-25%;
+      top: 25%;
+      transform: translate(-50%,-50%);
+      letter-spacing: 3px;
     }
-   
+   .car-cards{
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
   }
-  @media (max-width: 759px){
-    .amg5{
-      display: block;
-      width: 100%;
-    }
-    #amg5{
-      width: 100%;
-    }
-    #h1tfo{
-      display:flex;
-      justify-content: center;
-    }
-    .amg1tfo{
-      font-size: 17px;
-      font-weight: 400;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      margin-bottom: 40px;
-    }
-    #h1tfo2{
-      display: flex;
-      justify-content: center;
-    }
-    .amg2tfo{
-      width: 100%;
-    }
-    .interiortfo{
-      font-size: 17px;
-      font-weight: 400;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      margin-bottom: 40px;
-    }
-    footer{
-      position: relative;
-      top: 250%;
-    }
-  }
+}
   /*AMG SECTION*/
 
-   #amg1{
-    width: 50%;
-    margin: 7% 0 0 1rem;
-   }
-.amg1{
-  color:rgb(0, 0, 0);
-  position: absolute;
-  left: 70%;
-  top: 180%;
-  transform: translate(-50%,-50%);
-  text-wrap: wrap;
-  font-size: 20px;
-  font-weight: bold;
-
-}
-.amg #h1ab{
-  position: absolute;
-  right: 10%;
-  top: 140%;
-  transform: translate(-50%,-50%);
-  letter-spacing: 3px;
-}
-.amg2{
-  position: absolute;
-  top: 220%;
-  left: 52%;
-  width: 45%;
-  margin-bottom: 200px;
-  
-}
-.interior{
-  width: 50%;
-  color:rgb(0, 0, 0);
-  position: absolute;
-  left: 26%;
-  top: 246%;
-  transform: translate(-50%,-50%);
-  font-size: 20px;
-  line-height: 2rem;
-  font-weight: bold;
-  text-wrap: wrap;
-}
-#h1g2{
-  margin-top: 10px;
-  margin-left: 15px;
+  .car-listings {
+    text-align: center;
+    padding: 50px 20px;
+    background-color: #f4f4f4;
 }
 
+.car-listings h2 {
+    font-size: 2.5rem;
+    margin-bottom: 40px;
+}
+
+.car-cards {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.car-card {
+    background-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 300px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.car-card img {
+    width: 100%;
+    height: auto;
+}
+
+.car-card h3 {
+    font-size: 1.5rem;
+    margin: 20px 0;
+}
+
+.car-card p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
 .footer-content2{
   display: flex;
   position: absolute;
   width: 100%;
   height: 150px;
   background-color: gray;
-  top: 280%;
+  top: 200%;
   justify-content: center;
 }
 .footer-content2 p{
@@ -244,36 +206,7 @@ text-decoration: none;
 color: gold;
 }
 
-@media screen and (max-width:1669px) {
-  .amg #h1ab{
-    color: black;
-    font-size: 30px;
-    top: 120%;
-    right: 2%;
-}
 
-  .amg1{
-    position: absolute;
-    font-size: 17px;
-    top:155%;
-  }
-  .amg #h1g2{
-    font-size: 30px;
-    position: absolute;
-    top: 190%;
-  }
-  .interior{
-    font-size: 17px;
-  }
-  .text{
-    color:white;
-    position: absolute;
-    right: 40%;
-    top: 40%;
-    transform: translate(-50%,-50%);
-    letter-spacing: 3px;
-  }
-}
 /* About Us Section */
 #about-us {
   padding: 4rem 2rem;
@@ -482,7 +415,7 @@ input:focus{
   .cars{
     width: 50%;
     height:200px ;
-    padding-left:"0";
+    margin-left: 1rem;
   }
   .sl55{
     width: 100%;
@@ -493,8 +426,7 @@ input:focus{
 }
 }
 
-@media screen and (max-width: 1669px){
-}
+
 @media screen and (max-width: 1326px){
   .footer-content3{
     top: 330%;
