--- a/styleprjt.css
+++ b/styleprjt.css
@@ -77,6 +77,48 @@ color: gold;
   transform: translate(-50%,-50%);
   letter-spacing: 3px;
 }
+/*SERVICES*/
+.ser-listings {
+  text-align: center;
+  padding: 50px 20px;
+  background-color: #f4f4f4;
+}
+
+.ser-listings h2 {
+    font-size: 2.5rem;
+    margin-bottom: 40px;
+}
+
+.ser-cards {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.ser-card {
+    background-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 300px;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+
+.ser-card h3 {
+    font-size: 1.5rem;
+    margin: 20px 0;
+}
+
+.ser-card p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
+#dev{
+  font-size: 70px;
+ margin-top: 17%;
+}
 
 /* CHECK BTN */
 
@@ -101,6 +143,12 @@ color: gold;
     }
   }
   @media (max-width: 858px){
+    footer .footer-content2{
+      display: none;
+    }
+    .text{
+      display: none;
+    }
     .checkbtn{
       display: block;
     }
@@ -111,7 +159,7 @@ color: gold;
       top: 150px;
       left: -100%;
       text-align: center;
-      transition: all .5s;
+      transition: all .3s;
       background-color: black;
       flex-direction: column;
     }
@@ -145,8 +193,22 @@ color: gold;
     display: flex;
     flex-grow: 1;
     flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
   }
+  .ser-cards{
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+  }
+  .car-listings {
+    text-align: center;
+    padding: 50px 20px;
+    background-color: #f4f4f4;
 }
+  }
   /*AMG SECTION*/
 
   .car-listings {
@@ -195,7 +257,7 @@ color: gold;
   width: 100%;
   height: 150px;
   background-color: gray;
-  top: 200%;
+  top: 250%;
   justify-content: center;
 }
 .footer-content2 p{
@@ -205,7 +267,14 @@ color: gold;
 text-decoration: none;
 color: gold;
 }
-
+.ser-card{
+  background-color: #f1c778;
+}
+.ser-card:hover{
+  background-color: white;
+  cursor: pointer;
+  scale: 130%;
+  }
 
 /* About Us Section */
 #about-us {
